--- a/templates/index.html
+++ b/templates/index.html
@@ -1,1 +1,26 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Secure File Sharing System</title>
+</head>
+<body>
+
+<h2>Secure File Sharing System</h2>
+
+<form action="/upload" method="post" enctype="multipart/form-data">
+    <input type="file" name="file" required>
+    <button type="submit">Upload</button>
+</form>
+
+<h3>Encrypted Files</h3>
+<ul>
+{% for f in files %}
+  <li><a href="/download/{{ f }}">{{ f }}</a></li>
+{% else %}
+  <li>No files uploaded yet</li>
+{% endfor %}
+</ul>
+
+</body>
+</html>
 
